<resources>
    <string name="app_name">Screen transition</string>
    <string name="main">Main Activity</string>
    <string name="move">SKIP</string>
    <string name="home">HOME画面</string>
    <string name="closet">クローゼット</string>
    <string name="cloth">服装登録</string>
    <string name="setting">設定</string>
    <string name="mail">Email address</string>
    <string name="password">Password</string>
    <string name="cb_show">今後この画面を表示しない</string>
    <string name="action_sign_in">ログイン</string>
    <string name="title">ログイン画面</string>
    <string name="forget_log">ログイン情報を忘れてしまった方は</string>
    <string name="forget_msg">こちら</string>
    <string name="forget_aco">アカウントをお持ちでない場合、登録は</string>
    <string name="register_msg">こちら</string>
    <string name="home_tmp">仮表示エリア</string>
    <string name="password_title">パスワード再設定</string>
    <string name="mail_or_phone">Email address or phone number</string>
    <string name="send_button">送信</string>
    <string name="return_button">戻る</string>
    <string name="password_msg">入力されたアドレスにメールが、電話番号にショートメールが届きます\n届いたリンクからパスワードを再設定してください</string>
    <string name="msg_repassword">パスワード再設定でお困りの場合は、</string>
    <string name="mv_password">こちら</string>

    <string name="title_fail">ログイン失敗画面</string>
    <string name="fail_msg">ログイン失敗</string>


</resources>