<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfe"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:text="@string/title"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/img"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="150dp"
        android:contentDescription="@null"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="@string/mail"
        android:background="#ffffff"
        android:hint="@string/mail"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="@string/password"
        android:background="#ffffff"
        android:hint="@string/password"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"/>

    <CheckBox
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_show"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:backgroundTint="#ffff"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="#000"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/move"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/msg_login"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/forget_log"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/send_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="50dp"/>

    <Button
        android:id="@+id/mv_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/forget_msg"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_button"/>

    <TextView
        android:id="@+id/msg_account"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/forget_aco"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_login"
        tools:layout_editor_absoluteX="15dp" />

    <Button
        android:id="@+id/mv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/register_msg"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mv_log" />
</androidx.constraintlayout.widget.ConstraintLayout>